--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="game">
       <header class="game__header">
-        <button class="gameBtn">
+        <button class="game__button">
           <i class="fa-solid fa-play"></i>
         </button>
         <span class="game__timer">00:00</span>
@@ -22,7 +22,7 @@
       </header>
       <section class="game__field"></section>
     </section>
-    <section class="banner">
+    <section class="banner banner--hide">
       <button class="banner__replay">
         <i class="fa-solid fa-rotate-right"></i>
       </button>
